fix-index的hots區段文字改色、愛心icon互動hover改為調整透明度、修正愛心icon的z-index，並新增卡片hover放大效果

--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -91,8 +91,6 @@
     border: 2px solid var(--bs-secondary-40);
   }
   .heart-icon{
-    transform: scale(1);
-    transition: transform 0.3s ease-in-out;
     width: 62.8px;
     height: 62.8px;
     margin: 8px;
@@ -101,7 +99,7 @@
     background-position: center;
     cursor: pointer;
     &:hover{
-      transform: scale(1.03);
+      opacity: 0.9;
     }
   }
   .heartOn{
